--- a/index.html
+++ b/index.html
@@ -1,26 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>MTIT-Assignment 2</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 </head>
+<style>
+	.loader_bg {
+		position: fixed;
+		z-index: 999999;
+		background: #fff;
+		width: 100%;
+		height: 100%;
+	}
+
+	.loader {
+		border: 0 soild transparent;
+		border-radius: 50%;
+		width: 150px;
+		height: 150px;
+		position: absolute;
+		top: calc(50vh - 75px);
+		left: calc(50vw - 75px);
+	}
+
+	.loader:before,
+	.loader:after {
+		content: '';
+		border: 1em solid #ff5733;
+		border-radius: 50%;
+		width: inherit;
+		height: inherit;
+		position: absolute;
+		top: 0;
+		left: 0;
+		animation: loader 2s linear infinite;
+		opacity: 0;
+	}
+
+	.loader:before {
+		animation-delay: .5s;
+	}
+</style>
+
 <body>
 	<div class="loader_bg">
 		<div class="loader"></div>
@@ -48,7 +87,7 @@
 		<div class="flex-col-c-m p-l-15 p-r-15 p-t-80 p-b-90">
 			<h3 class="l1-txt2 txt-center p-b-55 respon1">
 				<!-- Go Tour with Augmented Reality -->
-				Tourism AR
+				Tourism Paradise
 			</h3>
 
 			<div>
@@ -56,42 +95,38 @@
 					<i class="zmdi zmdi-play"></i>
 				</button>
 			</div>
+			<div>
+				<br>
+				<br>
+				<a href="new.html"><button type="button" class="btn btn-light">Light</button></a>
+			</div>
 		</div>
-		
+
 		<div class="flex-sb-m flex-w w-full">
 		</div>
 	</div>
-
-
-
-	
-
-<!--===============================================================================================-->	
+	<!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/bootstrap/js/popper.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-	<!-- <script src="vendor/countdowntime/moment.min.js"></script>
-	<script src="vendor/countdowntime/moment-timezone.min.js"></script>
-	<script src="vendor/countdowntime/moment-timezone-with-data.min.js"></script>
-	<script src="vendor/countdowntime/countdowntime.js"></script> -->
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="vendor/tilt/tilt.jquery.min.js"></script>
-	<script >
+	<script>
 		$('.js-tilt').tilt({
 			scale: 1.1
 		})
 	</script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<script src="js/main.js"></script>
 	script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script>
-        setTimeout(function(){
-            $('.loader_bg').fadeToggle();
-        }, 1500);
-    </script>
+	<script>
+		setTimeout(function () {
+			$('.loader_bg').fadeToggle();
+		}, 1500);
+	</script>
 </body>
+
 </html>
