--- a/new.html
+++ b/new.html
@@ -20,6 +20,7 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="css/util.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--===============================================================================================-->
 </head>
 <style>
@@ -66,6 +67,183 @@
         <div class="loader"></div>
     </div>
     <!-- End of Loader -->
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-lg-12">
+
+
+                <ul class="filters text-center">
+                    <li class="active" data-filter="*"><a href="#!">All</a></li>
+                    <li data-filter=".html"><a href="#!">HTML</a></li>
+                    <li data-filter=".css"><a href="#!">CSS</a></li>
+                    <li data-filter=".javascript"><a href="#!">Javascript</a></li>
+                </ul>
+
+                <div class="projects">
+
+                    <div class="row">
+
+                        <div class="col-lg-4 item html">
+
+                            <div class="card">
+
+                                <div class="card-head">
+                                    <img src="images/img2.jpg" alt="" class="img-fluid card-img">
+                                    <div class="card-overlay">
+                                        <h2>HTML</h2>
+                                    </div>
+                                    <div class="card-hover">
+                                        <h2>Lorem, ipsum.</h2>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quo
+                                            repudiandae eaque maiores provident deserunt.</p>
+                                    </div>
+                                </div>
+
+                                <div class="card-body text-center">
+                                    <h4 class="title">HTML</h4>
+                                    <a href="#!" class="btn btn-lg card-btn">See More</a>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-4 item css">
+
+                            <div class="card">
+
+                                <div class="card-head">
+                                    <img src="images/img3.jpg" alt="" class="img-fluid card-img">
+                                    <div class="card-overlay">
+                                        <h2>CSS</h2>
+                                    </div>
+                                    <div class="card-hover">
+                                        <h2>Lorem, ipsum.</h2>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quo
+                                            repudiandae eaque maiores provident deserunt.</p>
+                                    </div>
+                                </div>
+
+                                <div class="card-body text-center">
+                                    <h4 class="title">CSS</h4>
+                                    <a href="#!" class="btn btn-lg card-btn">See More</a>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-4 item javascript">
+
+                            <div class="card">
+
+                                <div class="card-head">
+                                    <img src="images/img4.jpg" alt="" class="img-fluid card-img">
+                                    <div class="card-overlay">
+                                        <h2>Javascript</h2>
+                                    </div>
+                                    <div class="card-hover">
+                                        <h2>Lorem, ipsum.</h2>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quo
+                                            repudiandae eaque maiores provident deserunt.</p>
+                                    </div>
+                                </div>
+
+                                <div class="card-body text-center">
+                                    <h4 class="title">Javascript</h4>
+                                    <a href="#!" class="btn btn-lg card-btn">See More</a>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-4 item html">
+
+                            <div class="card">
+
+                                <div class="card-head">
+                                    <img src="images/img5.jpg" alt="" class="img-fluid card-img">
+                                    <div class="card-overlay">
+                                        <h2>HTML</h2>
+                                    </div>
+                                    <div class="card-hover">
+                                        <h2>Lorem, ipsum.</h2>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quo
+                                            repudiandae eaque maiores provident deserunt.</p>
+                                    </div>
+                                </div>
+
+                                <div class="card-body text-center">
+                                    <h4 class="title">HTML</h4>
+                                    <a href="#!" class="btn btn-lg card-btn">See More</a>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-4 item css">
+
+                            <div class="card">
+
+                                <div class="card-head">
+                                    <img src="images/img6.jpg" alt="" class="img-fluid card-img">
+                                    <div class="card-overlay">
+                                        <h2>CSS</h2>
+                                    </div>
+                                    <div class="card-hover">
+                                        <h2>Lorem, ipsum.</h2>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quo
+                                            repudiandae eaque maiores provident deserunt.</p>
+                                    </div>
+                                </div>
+
+                                <div class="card-body text-center">
+                                    <h4 class="title">CSS</h4>
+                                    <a href="#!" class="btn btn-lg card-btn">See More</a>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="col-lg-4 item html">
+
+                            <div class="card">
+
+                                <div class="card-head">
+                                    <img src="images/img7.jpg" alt="" class="img-fluid card-img">
+                                    <div class="card-overlay">
+                                        <h2>HTML</h2>
+                                    </div>
+                                    <div class="card-hover">
+                                        <h2>Lorem, ipsum.</h2>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, quo
+                                            repudiandae eaque maiores provident deserunt.</p>
+                                    </div>
+                                </div>
+
+                                <div class="card-body text-center">
+                                    <h4 class="title">HTML</h4>
+                                    <a href="#!" class="btn btn-lg card-btn">See More</a>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
 
     <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
@@ -75,6 +253,8 @@
     <script src="vendor/select2/select2.min.js"></script>
     <!--===============================================================================================-->
     <script src="vendor/tilt/tilt.jquery.min.js"></script>
+    <script src="js/isotope.min.js"></script>
+    <script src="js/script.js"></script>
     <script>
         $('.js-tilt').tilt({
             scale: 1.1
