--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<div>
 				<br>
 				<br>
-				<a href="new.html"><button type="button" class="btn btn-light">Light</button></a>
+				<a href="card.html"><button type="button" class="btn btn-light">Light</button></a>
 			</div>
 		</div>
 
