--- a/cards.html
+++ b/cards.html
@@ -67,24 +67,15 @@
         <div class="loader"></div>
     </div>
     <!-- End of Loader -->
+    <br><br><br>
     <div class="container">
 
         <div class="row">
 
             <div class="col-lg-12">
-
-
-                <ul class="filters text-center">
-                    <li class="active" data-filter="*"><a href="#!">All</a></li>
-                    <li data-filter=".html"><a href="#!">HTML</a></li>
-                    <li data-filter=".css"><a href="#!">CSS</a></li>
-                    <li data-filter=".javascript"><a href="#!">Javascript</a></li>
-                </ul>
-
                 <div class="projects">
-
+                    
                     <div class="row">
-
                         <div class="col-lg-4 item html">
 
                             <div class="card">
@@ -92,7 +83,7 @@
                                 <div class="card-head">
                                     <img src="images/img2.jpg" alt="" class="img-fluid card-img">
                                     <div class="card-overlay">
-                                        <h2>HTML</h2>
+                                        <h2>Place 1</h2>
                                     </div>
                                     <div class="card-hover">
                                         <h2>Lorem, ipsum.</h2>
@@ -102,7 +93,7 @@
                                 </div>
 
                                 <div class="card-body text-center">
-                                    <h4 class="title">HTML</h4>
+                                    <!-- <h4 class="title">HTML</h4> -->
                                     <a href="#!" class="btn btn-lg card-btn">See More</a>
                                 </div>
 
@@ -117,7 +108,7 @@
                                 <div class="card-head">
                                     <img src="images/img3.jpg" alt="" class="img-fluid card-img">
                                     <div class="card-overlay">
-                                        <h2>CSS</h2>
+                                        <h2>Place 2</h2>
                                     </div>
                                     <div class="card-hover">
                                         <h2>Lorem, ipsum.</h2>
@@ -127,7 +118,7 @@
                                 </div>
 
                                 <div class="card-body text-center">
-                                    <h4 class="title">CSS</h4>
+                                    <!-- <h4 class="title">CSS</h4> -->
                                     <a href="#!" class="btn btn-lg card-btn">See More</a>
                                 </div>
 
@@ -142,7 +133,7 @@
                                 <div class="card-head">
                                     <img src="images/img4.jpg" alt="" class="img-fluid card-img">
                                     <div class="card-overlay">
-                                        <h2>Javascript</h2>
+                                        <h2>Place 3</h2>
                                     </div>
                                     <div class="card-hover">
                                         <h2>Lorem, ipsum.</h2>
@@ -152,7 +143,7 @@
                                 </div>
 
                                 <div class="card-body text-center">
-                                    <h4 class="title">Javascript</h4>
+                                    <!-- <h4 class="title">Javascript</h4> -->
                                     <a href="#!" class="btn btn-lg card-btn">See More</a>
                                 </div>
 
@@ -167,7 +158,7 @@
                                 <div class="card-head">
                                     <img src="images/img5.jpg" alt="" class="img-fluid card-img">
                                     <div class="card-overlay">
-                                        <h2>HTML</h2>
+                                        <h2>Place 4</h2>
                                     </div>
                                     <div class="card-hover">
                                         <h2>Lorem, ipsum.</h2>
@@ -177,7 +168,7 @@
                                 </div>
 
                                 <div class="card-body text-center">
-                                    <h4 class="title">HTML</h4>
+                                    <!-- <h4 class="title">HTML</h4> -->
                                     <a href="#!" class="btn btn-lg card-btn">See More</a>
                                 </div>
 
@@ -192,7 +183,7 @@
                                 <div class="card-head">
                                     <img src="images/img6.jpg" alt="" class="img-fluid card-img">
                                     <div class="card-overlay">
-                                        <h2>CSS</h2>
+                                        <h2>Place 5</h2>
                                     </div>
                                     <div class="card-hover">
                                         <h2>Lorem, ipsum.</h2>
@@ -202,7 +193,7 @@
                                 </div>
 
                                 <div class="card-body text-center">
-                                    <h4 class="title">CSS</h4>
+                                    <!-- <h4 class="title">CSS</h4> -->
                                     <a href="#!" class="btn btn-lg card-btn">See More</a>
                                 </div>
 
@@ -217,7 +208,7 @@
                                 <div class="card-head">
                                     <img src="images/img7.jpg" alt="" class="img-fluid card-img">
                                     <div class="card-overlay">
-                                        <h2>HTML</h2>
+                                        <h2>Place 6</h2>
                                     </div>
                                     <div class="card-hover">
                                         <h2>Lorem, ipsum.</h2>
@@ -227,7 +218,7 @@
                                 </div>
 
                                 <div class="card-body text-center">
-                                    <h4 class="title">HTML</h4>
+                                    <!-- <h4 class="title">HTML</h4> -->
                                     <a href="#!" class="btn btn-lg card-btn">See More</a>
                                 </div>
 
