--- a/index.html
+++ b/index.html
@@ -20,46 +20,9 @@
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/loader.css">
 	<!--===============================================================================================-->
 </head>
-<style>
-	.loader_bg {
-		position: fixed;
-		z-index: 999999;
-		background: #fff;
-		width: 100%;
-		height: 100%;
-	}
-
-	.loader {
-		border: 0 soild transparent;
-		border-radius: 50%;
-		width: 150px;
-		height: 150px;
-		position: absolute;
-		top: calc(50vh - 75px);
-		left: calc(50vw - 75px);
-	}
-
-	.loader:before,
-	.loader:after {
-		content: '';
-		border: 1em solid #ff5733;
-		border-radius: 50%;
-		width: inherit;
-		height: inherit;
-		position: absolute;
-		top: 0;
-		left: 0;
-		animation: loader 2s linear infinite;
-		opacity: 0;
-	}
-
-	.loader:before {
-		animation-delay: .5s;
-	}
-</style>
-
 <body>
 	<div class="loader_bg">
 		<div class="loader"></div>
@@ -91,14 +54,16 @@
 			</h3>
 
 			<div>
-				<button class="how-btn-play1 flex-c-m">
-					<i class="zmdi zmdi-play"></i>
-				</button>
+				<!-- <button class="how-btn-play1 flex-c-m">
+					<i class="zmdi zmdi-play"> Lets Go</i>
+				</button> -->
 			</div>
 			<div>
 				<br>
 				<br>
-				<a href="card.html"><button type="button" class="btn btn-light">Light</button></a>
+				<a href="cards.html">
+					<button>test</button>
+				</a>
 			</div>
 		</div>
 
