--- a/teste.html
+++ b/teste.html
@@ -28,7 +28,7 @@
 
 
     
-.transition-1 {
+/* .transition-1 {
   position: fixed;
   top: 0;
   left: 0;
@@ -70,7 +70,7 @@
   z-index: 101;
   background-color: var(--dark);
   transition: 0.5s ease-out;
-}
+} */
 
 .transition-3.is-active {
   top: 0;
