loader colour updated

--- a/cards.html
+++ b/cards.html
@@ -45,7 +45,7 @@
     .loader:before,
     .loader:after {
         content: '';
-        border: 1em solid #ff5733;
+        border: 1em solid rgba(40,190,168,0.9);
         border-radius: 50%;
         width: inherit;
         height: inherit;
@@ -94,7 +94,7 @@
 
                                 <div class="card-body text-center">
                                     <!-- <h4 class="title">HTML</h4> -->
-                                    <a href="#!" class="btn btn-lg card-btn">See More</a>
+                                    <a href="test.html" class="btn btn-lg card-btn">See More</a>
                                 </div>
 
                             </div>
@@ -169,7 +169,7 @@
 
                                 <div class="card-body text-center">
                                     <!-- <h4 class="title">HTML</h4> -->
-                                    <a href="#!" class="btn btn-lg card-btn">See More</a>
+                                    <a href="#" class="btn btn-lg card-btn">See More</a>
                                 </div>
 
                             </div>
