--- a/test.html
+++ b/test.html
@@ -27,8 +27,14 @@
 </head>
 
 <body>
-    
+    <!-- loader start -->
+    <div class="loader_bg">
+        <div class="loader"></div>
+    </div>
+    <!-- loader end -->
 </body>
+
+<!-- JS  -->
 <!--===============================================================================================-->
 <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
@@ -37,10 +43,6 @@
 <!--===============================================================================================-->
 <script src="vendor/select2/select2.min.js"></script>
 <!--===============================================================================================-->
-<!-- <script src="vendor/countdowntime/moment.min.js"></script>
-        <script src="vendor/countdowntime/moment-timezone.min.js"></script>
-        <script src="vendor/countdowntime/moment-timezone-with-data.min.js"></script>
-        <script src="vendor/countdowntime/countdowntime.js"></script> -->
 <!--===============================================================================================-->
 <script src="vendor/tilt/tilt.jquery.min.js"></script>
 <script>
