--- a/cards.html
+++ b/cards.html
@@ -94,7 +94,7 @@
 
                                 <div class="card-body text-center">
                                     <!-- <h4 class="title">HTML</h4> -->
-                                    <a href="#!" class="btn btn-lg card-btn">See More</a>
+                                    <a href="test.html" class="btn btn-lg card-btn">See More</a>
                                 </div>
 
                             </div>
