--- a/test.html
+++ b/test.html
@@ -28,180 +28,49 @@
         <div class="loader"></div>
     </div>
 
-    <div class="simpleslide100">
-        <!-- <div class="simpleslide100-item bg-img1" style="background-image: url('images/img1.jpg');"></div> -->
-        <!-- <div class="simpleslide100-item bg-img1" style="background-image: url('images/img2.jpg');"></div> -->
-        <!-- <!-- <div class="simpleslide100-item bg-img1" style="background-image: url('images/img3.jpg');"></div> -->
-        <div class="simpleslide100-item bg-img1" style="background-image: url('images/img4.jpg');"></div>
-        <div class="simpleslide100-item bg-img1" style="background-image: url('images/img5.jpg');"></div>
-        <div class="simpleslide100-item bg-img1" style="background-image: url('images/img6.jpg');"></div>
-        <div class="simpleslide100-item bg-img1" style="background-image: url('images/img7.jpg');"></div> -->
-    </div>
+    <a-scene embedded vr-mode-ui="enabled: false;" arjs="debugUIEnabled: false;">
+        <a-marker id="marker" preset="custom" type="pattern" url="markers/earth.patt">
+            <a-entity gltf-model="url(./models/earth/scene.gltf)" scale="0.01 0.01 0.01" rotation="0 0 0"
+                rotation="0 0 0">
+                <a-animation attribute="rotation" easing="linear" dur="10000" to="0 360 0" repeat="indefinite">
+                </a-animation>
+            </a-entity>
+
+            <a-text value="IT19152592" position="-0.6 -2 0"> </a-text>
+
+            <a-image src="images/earth.png" position="2.5 0 0" width="2px" height="3px"></a-image>
+        </a-marker>
+
+        <a-entity camera></a-entity>
+    </a-scene>
+
+</body>
 
 
-    <div class="content">
-        <div class="row">
-            <img class="card" src="images/imgo1.jpg" style="width: 21rem;">
-            <!-- <div class="card-body"> -->
-            <!-- <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a> -->
-        </div>
-    </div>
+<!--===============================================================================================-->
+<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+<script src="vendor/bootstrap/js/popper.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+<script src="vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
 
-    <img class="card" src="images/bg02.jpg" style="width: 21rem;">
-    <!-- <div class="card-body"> -->
-    <!-- <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a> -->
-    </div>
-    </div>
-
-    <img class="card" src="images/bg03.jpg" style="width: 21rem;">
-    <!-- <div class="card-body"> -->
-    <!-- <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a> -->
-    </div>
-    </div>
-
-    <div class="card">
-        <img src="images/imgo1.jpg">
-        <div class="intro">
-            <h1>sdasdas</h1>
-            <p>safas<span>gjbbbbbbbbbh</span>mbasas</p>
-        </div>
-    </div>
-    <!-- <img class="card" src="images/bg04.jpg" style="width: 21rem;"> -->
-    <!-- <div class="card-body"> -->
-    <!-- <img src="images/bg01.jpg" class="card"> -->
-    <!-- <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a> -->
-    </div>
-    </div>
-    </div>
-    </div>
-    <style>
-        .container {
-            width: 90%;
-            padding: 20px;
-            margin: 100px auto;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-        }
-
-
-        .box {
-            width: 250px;
-            margin: 0 10px;
-            box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
-            transition: 1s;
-
-        }
-
-        .box img {
-            display: block;
-            width: 100%;
-            border-radius: 5px;
-        }
-
-        .box:hover {
-            transform: scale(1.3);
-            z-index: 2;
-        }
-    </style>
-    <!-- <style>
-        .content{
-            /* padding: 80px 20px 0px 100px; */
-            padding-right: 0px;
-        }
-
-        .card{
-            margin-right: 10px;
-            margin-left: 20px;
-            width: 21rem;
-            height: 18rem;
-            /* box-shadow: 20px 20px; */
-            border-radius: 10px;
-        }
-
-    </style> -->
-    <!-- 
-<a-scene
-      embedded
-      vr-mode-ui="enabled: false;"
-      arjs="debugUIEnabled: false;"
-    >
-      <a-marker id="marker" preset="custom" type="pattern" url="markers/earth.patt">
-        <a-entity
-          gltf-model="url(./models/earth/scene.gltf)"
-          scale="0.01 0.01 0.01"
-          rotation="0 0 0"
-          rotation="0 0 0"
-        >
-          <a-animation
-            attribute="rotation"
-            easing="linear"
-            dur="10000"
-            to="0 360 0"
-            repeat="indefinite"
-          >
-          </a-animation>
-        </a-entity>
-
-        <a-text value="IT18091380" position="-0.6 -2 0"> </a-text>
-
-        <a-image
-          src="images/earth.png"
-          position="2.5 0 0"
-          width="2px"
-          height="3px"
-        ></a-image>
-      </a-marker>
-
-      <a-entity camera></a-entity>
-    </a-scene> -->
-    <!--===============================================================================================-->
-    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="vendor/bootstrap/js/popper.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="vendor/select2/select2.min.js"></script>
-    <!--===============================================================================================-->
-    <!-- <script src="vendor/countdowntime/moment.min.js"></script>
-        <script src="vendor/countdowntime/moment-timezone.min.js"></script>
-        <script src="vendor/countdowntime/moment-timezone-with-data.min.js"></script>
-        <script src="vendor/countdowntime/countdowntime.js"></script> -->
-    <!--===============================================================================================-->
-    <script src="vendor/tilt/tilt.jquery.min.js"></script>
-    <script>
-        $('.js-tilt').tilt({
-            scale: 1.1
-        })
-    </script>
-    <!--===============================================================================================-->
-    <script src="js/main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script>
-        setTimeout(function () {
-            $('.loader_bg').fadeToggle();
-        }, 1500);
-    </script>
+<!--===============================================================================================-->
+<script src="vendor/tilt/tilt.jquery.min.js"></script>
+<script>
+    $('.js-tilt').tilt({
+        scale: 1.1
+    })
+</script>
+<!--===============================================================================================-->
+<script src="js/main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script>
+    setTimeout(function () {
+        $('.loader_bg').fadeToggle();
+    }, 1500);
+</script>
 </body>
 
 </html>
